# Vaccins

./: README-TAURI.md  README.md  package-lock.json  package.json  setup-tauri.sh  temp_function.js  update-api-urls.sh  update-ip.sh
backend/: .env  app.js  package-lock.json  package.json  server.js
backend/config/: config.js  db.js
backend/controllers/: authController.js  childHistoryController.js  deletedChildrenLogController.js  enfantsController.js  fokotanyController.js  hameauController.js  notificationsController.js  usersController.js  vaccinationController.js  vaccinationsController.js  vaccinationsController.js.bak  vaccinsController.js
backend/middleware/: auth.js
backend/middlewares/: authMiddleware.js
backend/migrations/: add_columns_to_vaccin_suite.sql  add_lot_stock_to_vaccins.sql  alter_vaccinsuite_type.sql
bdd/: CSB.sql  Enfants.sql  Fokotany.sql  Hameau.sql  MigrationDuree.sql  System.sql  Vaccinations.sql  Vaccins.sql  accounts.sql  add_age_columns.sql  add_child_history_table.sql  add_deleted_children_log_table.sql  add_strict_column.sql  add_strict_delai_to_suite.sql  fix_child_history_constraint.sql  notifications.sql  users.sql
frontend/: fix_all_api_calls.sh  fix_buildApiUrl.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
my-tauri-app/: README.md
my-tauri-app/my-tauri-app/tauri/: Cargo.toml
my-tauri-app/my-tauri-app/tauri/src/: main.rs
my-tauri-app/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
(+125 files in other folders)
