[package]
name = "my-tauri-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }

[build]
rustflags = ["--cfg", "tauri"]

[package.metadata.tauri]
bundle = { 
  identifier = "com.example.mytauriapp", 
  name = "My Tauri App", 
  version = "0.1.0", 
  description = "A Tauri application built with an existing web app", 
  copyright = "Copyright © 2023 Your Name" 
}